@@ -7,7 +7,13 @@ fi
 
 apt-get -y update
 apt-get -y install python3-pip
-apt-get -y install firefox
+
+#apt-get -y install firefox
+wget https://ftp.mozilla.org/pub/firefox/releases/66.0b9/linux-x86_64/en-US/firefox-66.0b9.tar.bz2
+tar xvf firefox-66.0b9.tar.bz2
+mv firefox/ /usr/lib/firefox
+ln -s /usr/lib/firefox/firefox /usr/bin/firefox
+apt-mark hold firefox
 
 cp firefox/geckodriver.ubuntu /usr/local/bin/geckodriver
 
