@@ -1,6 +1,7 @@
 run-1.48（进行中）
 ------------------------------------------------------------------------
 1.新增半速版本的follow，like脚本
+2.由于最近发生的代理无法连接的问题，install.sh现在固定安装66.0版本的firefox，并阻止自动更新
 
 
 droplet-1.05（进行中）
